Fix color contrast accesibilty to buyers-sellers

--- a/scss/core/helpers/resources/essential-information.scss
+++ b/scss/core/helpers/resources/essential-information.scss
@@ -81,7 +81,7 @@
 				font-weight: 600;
 				span{
 					font-weight: 600;
-					color: #5f5f5f;
+					color: #333;
 					font-size: 14/16*1rem;
 					display: block;
 				}
