--- a/scss/core/pages/property-detail.scss
+++ b/scss/core/pages/property-detail.scss
@@ -121,6 +121,7 @@
       }
     }
     .full-screen{
+      color: #fff;
       position: absolute;
       top: 1rem;
       z-index: 3;
